# app/Http/Controllers/TransferenciaMateriaisController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Models\TransferenciaDeMateriais;
+use App\Models\TransferenciaItens;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 
@@ -17,10 +18,51 @@ class TransferenciaMateriaisController extends Controller
      * Lista Todas as Transferencias
      * @authenticated
      * 
+     * @response 200 {
+     *      "mensagem": "Todas transferencias cadastradas",
+     *      "transferencias": [
+     *          {
+     *              "id": 4,
+     *              "base_origem_id": {
+     *                  "id": 1,
+     *                  "departamento_id": 1,
+     *                  "nome": "Lugar 01",
+     *                  "tipo": "parque",
+     *                  "cep": "93472898",
+     *                  "logradouro": null,
+     *                  "numero": null,
+     *                  "bairro": null,
+     *                  "cidade": null,
+     *                  "created_at": null,
+     *                  "updated_at": null
+     *              },
+     *              "base_destino_id": {
+     *                  "id": 2,
+     *                  "departamento_id": 2,
+     *                  "nome": "Lugar 02",
+     *                  "tipo": "base",
+     *                  "cep": null,
+     *                  "logradouro": null,
+     *                  "numero": null,
+     *                  "bairro": null,
+     *                  "cidade": null,
+     *                  "created_at": null,
+     *                  "updated_at": null
+     *              },
+     *              "data_transferencia": "2023-05-05 00:00:00",
+     *              "status": "recebido",
+     *              "user_id": 1,
+     *              "observacao": "Está faltando um parafuso",
+     *              "observacao_motivo": "avaria",
+     *              "observacao_user_id": 1,
+     *              "created_at": "2023-05-04T15:02:33.000000Z",
+     *              "updated_at": "2023-05-10T13:02:27.000000Z"
+     *    }
+     * }
      */
     public function index()
     {
-        $transferencia = TransferenciaDeMateriais::all();
+        $transferencia = TransferenciaDeMateriais::with('base_origem_id', 'base_destino_id')->get();
 
         return response()->json([
             'mensagem' => 'Todas transferencias cadastradas',
@@ -39,25 +81,39 @@ class TransferenciaMateriaisController extends Controller
      * @bodyParam status enum required Status da transferencia (enviado, recebido, recusado). Example: enviado
      * @bodyParam observacao text Observação. Example: Está faltando um parafuso
      * @bodyParam observacao_motivo enum Observação Motivo (nao_enviado, itens_faltando, extravio, furto, avaria). Example: itens_faltando
-     * 
+     * @bodyParam itens object required Lista de itens.
+     * @bodyParam itens[].entrada_id integer required ID da entrada. Example: 3
+     * @bodyParam itens[].item_id integer required ID do item. Example: 5
+     * @bodyParam itens[].quantidade integer required Quantidade de itens. Example: 355
      *
      * @response 200 {
-     *      {
-     *    "mensagem": "Transferencia cadastrada com sucesso!",
-     *    "transferencia": {
+     *      "mensagem": "Transferencia criada com sucesso",
+     *      "transferencia": {
      *          "base_origem_id": 1,
      *          "base_destino_id": 2,
      *          "data_transferencia": "2023/05/05",
-     *          "status": enviado,
+     *          "status": "recebido",
      *          "user_id": 1,
-     *          "observacao": "Teste Observação",
-     *          "observacao_motivo": "itens_faltando",
+     *          "observacao": "Uma Observação",
+     *          "observacao_motivo": "avaria",
      *          "observacao_user_id": 1,
-     *          "updated_at": "2023-05-09T15:23:32.000000Z",
-     *          "created_at": "2023-05-09T15:23:32.000000Z",
-     *          "id": 9
-     *      }
-     * }
+     *          "updated_at": "2023-05-11T13:18:55.000000Z",
+     *          "created_at": "2023-05-11T13:18:55.000000Z",
+     *          "id": 18
+     *      },
+     *      "itens": [
+     *          {
+     *              "entrada_id": 1,
+     *              "item_id": 4,
+     *              "quantidade": 1
+     *          },
+     *          {
+     *              "entrada_id": 1,
+     *              "item_id": 45,
+     *              "quantidade": 3
+     *          }
+     *      ]
+     *  }
      */
     public function store(Request $request)
     {
@@ -74,11 +130,24 @@ class TransferenciaMateriaisController extends Controller
 
         $transferencia->save();
 
+        
+        $itens = $request->input('itens');
+        
+        foreach($itens as $item) {
+            TransferenciaItens::create([ 
+                'entrada_id' => $transferencia['id'],
+                'item_id' => $item['item_id'],
+                'quantidade' => $item['quantidade'],
+            ]);
+        }
+        
         return response()->json([
             'mensagem' => 'Transferencia cadastrada com sucesso!',
-            'transferencia' => $transferencia
+            'transferencia' => $transferencia,
+            'itens' => $itens
         ], 200);
     }
+    
 
 
     /**
@@ -90,17 +159,41 @@ class TransferenciaMateriaisController extends Controller
      * @response 200 {
      *      "mensagem": "Transferencia encontrada com sucesso!",
      *      "transferencia": {
-     *          "id": 5,
-     *          "base_origem_id": 2,
-     *          "base_destino_id": 1,
-     *          "data_transferencia": "2023-05-07 00:00:00",
+     *          "id": 4,
+     *          "base_origem_id": {
+     *              "id": 1,
+     *              "departamento_id": 1,
+     *              "nome": "Lugar 01",
+     *              "tipo": "parque",
+     *              "cep": "93472898",
+     *              "logradouro": null,
+     *              "numero": null,
+     *              "bairro": null,
+     *              "cidade": null,
+     *              "created_at": null,
+     *              "updated_at": null
+     *          },
+     *          "base_destino_id": {
+     *              "id": 2,
+     *              "departamento_id": 2,
+     *              "nome": "Lugar 02",
+     *              "tipo": "base",
+     *              "cep": null,
+     *              "logradouro": null,
+     *              "numero": null,
+     *              "bairro": null,
+     *              "cidade": null,
+     *              "created_at": null,
+     *              "updated_at": null
+     *          },
+     *          "data_transferencia": "2023-05-05 00:00:00",
      *          "status": "recebido",
      *          "user_id": 1,
-     *          "observacao": "Teste Observação testado",
-     *          "observacao_motivo": "extravio",
+     *          "observacao": "Está faltando um parafuso",
+     *          "observacao_motivo": "avaria",
      *          "observacao_user_id": 1,
-     *          "created_at": "2023-05-05T12:54:06.000000Z",
-     *          "updated_at": "2023-05-05T12:57:59.000000Z"
+     *          "created_at": "2023-05-04T15:02:33.000000Z",
+     *          "updated_at": "2023-05-10T13:02:27.000000Z"
      *      }
      * }
      * 
@@ -110,7 +203,7 @@ class TransferenciaMateriaisController extends Controller
      */
     public function show($id)
     {
-        $transferencia = TransferenciaDeMateriais::where('id', $id)->first();
+        $transferencia = TransferenciaDeMateriais::with('base_origem_id', 'base_destino_id')->findOrFail($id);
 
         if($transferencia)
         {
